--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -170,7 +170,7 @@ jobs:
             gh release delete-asset \
               "$release_tag" \
               "$f"
-          done < <( cd dist && ls -1 "$dist" META-*.tar.gz 2>/dev/null)
+          done < <( cd dist && ls -1 "$distribution" META-*.tar.gz 2>/dev/null)
           set -e
           echo "Augmenting release."
           gh release upload \
